fix search input wrap

--- a/src/assets/scss/components/autocomplete-input.scss
+++ b/src/assets/scss/components/autocomplete-input.scss
@@ -15,7 +15,8 @@
     &-input {
         display: block;
         width: 100%;
-        height: 35px;
+        height: 33.6px;
+        font-size: 13px;
         padding: 10px 50px 10px 10px;
         color: color('appHeaderSearchBg');
         border: none;
