--- a/src/assets/scss/main/common/header.scss
+++ b/src/assets/scss/main/common/header.scss
@@ -63,7 +63,7 @@
   }
 }
 .wrap-autocomplete-input {
-  padding: 11px 0;
+  padding: 12px 0;
 }
 @media (max-width: 575px) {
   /*---------- header ---------------*/
